Fixed message spacing and mentions being moved strangely

--- a/OldMessages.theme.css
+++ b/OldMessages.theme.css
@@ -1,8 +1,12 @@
-//META{"name":"OldMessages","description":"Restores old messages style","author":"PseudoResonance","version":"1.1.5"}*//
+//META{"name":"OldMessages","description":"Restores old messages style","author":"PseudoResonance","version":"1.1.6"}*//
 
 :root {
 	--message-spacing:1.0625rem;
 	--header-height:1.375rem;
+}
+
+body {
+	--version: "v1.1.6";
 }
 
 /* Disable message hover */
@@ -21,29 +25,23 @@
 }
 
 /* Mentions - Comment these two sections out if you want to keep the new mention highlighting */
-.messages-3amgkR .message-2qnXI6.mentioned-xhSam7 .markup-2BOw-j {
+.messages-3amgkR > .message-2qnXI6.mentioned-xhSam7 > .contents-2mQqc9 > .markup-2BOw-j {
 	background-color:var(--background-mentioned) !important;
-	position:relative;
-	padding-left:5px;
-	left:-5px;
-}
-
-.messages-3amgkR .message-2qnXI6.mentioned-xhSam7 .markup-2BOw-j::before {
-	content:"";
-	display:inline-block;
-	position:absolute;
-	top:0;
-	left:-6px;
-	bottom:0;
-    pointer-events:none;
-    width:2px;
+	margin-left:-8px;
+	padding-left:4px;
+	height:auto;
 	border-left:4px solid #faa61a;
 	border-radius:3px 0 0 3px;
 }
 
-/* Message spacing */
-.messages-3amgkR .message-2qnXI6 .container-2LR0t2 {
-	padding-left:80px;
+.messages-3amgkR > .message-2qnXI6.mentioned-xhSam7 > .contents-2mQqc9 > .markup-2BOw-j::before {
+	content:"";
+	display:block;
+	position:absolute;
+	left:61px;
+	height:inherit;
+    pointer-events:none;
+    width:2px;
 }
 
 /* Remove emoji suggestions */
@@ -104,8 +102,17 @@
 }
 
 /* Margin on text to accomodate buttons */
-.messages-3amgkR .message-2qnXI6 .markup-2BOw-j {
-	margin-right:22px;
+.messages-3amgkR .message-2qnXI6 .markup-2BOw-j::before {
+	content:'';
+	width:20px;
+	height:16px;
+	display:inline-flex;
+	float:right;
+}
+
+/* Make text area wider */
+.messages-3amgkR .message-2qnXI6 {
+	padding-right:0.875rem;
 }
 
 /* Rotate settings button */
@@ -201,4 +208,10 @@
 /* Timestamp divider color */
 .messages-3amgkR .divider-3_HH5L:not(.isUnread-3Ef-o9) span::before, .messages-3amgkR .divider-3_HH5L:not(.isUnread-3Ef-o9) span::after {
 	border-bottom:thin solid var(--text-muted);
+}
+
+/* Display version info */
+.bda-slist > li[data-name="OldMessagesLoader"] > .bda-header > .bda-header-title::after {
+	content: "Theme Version: " var(--version);
+	padding-left:1em;
 }
